# kerntopia

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  STATUS.md
assets/images/: StockSnap_2Q79J32WX2_512x512.txt
cmake/: GenerateCompileCommands.cmake  GenerateKernelMetadata.cmake  SlangKernels.cmake
docs/: DEVELOPER_GUIDE.md  ROSTER.md
examples/: CMakeLists.txt
src/: README.md
src/core/: CMakeLists.txt  README.md
src/core/backend/: backend_factory.cpp  backend_factory.hpp  cuda_memory.cpp  cuda_memory.hpp  cuda_runner.cpp  cuda_runner.hpp  ikernel_runner.hpp  runtime_loader.cpp  runtime_loader.hpp  vulkan_memory.cpp  vulkan_memory.hpp  vulkan_runner.cpp  vulkan_runner.hpp
src/core/common/: data_span.cpp  data_span.hpp  error_handling.cpp  error_handling.hpp  kernel_result.hpp  logger.cpp  logger.hpp  path_utils.cpp  path_utils.hpp  test_params.hpp
src/core/imaging/: color_space.cpp  color_space.hpp  image_data.hpp  image_loader.cpp  image_loader.hpp
src/core/system/: device_info.cpp  device_info.hpp  interrogation_data.hpp  interrogator.cpp  interrogator.hpp  system_info_service.cpp  system_info_service.hpp  system_interrogator.cpp  system_interrogator.hpp
src/kerntopia/: CMakeLists.txt  command_line.cpp  command_line.hpp  kernel_manager.cpp  kernel_manager.hpp  main.cpp  test_orchestrator.cpp  test_orchestrator.hpp
src/tests/: CMakeLists.txt  all_tests_main.cpp
src/tests/bilateral/: CMakeLists.txt
src/tests/common/: base_test.cpp  base_test.hpp  gtest_main.cpp  test_utilities.cpp  test_utilities.hpp
src/tests/conv2d/: CMakeLists.txt  conv2d.ptx  conv2d.slang  conv2d_core.cpp  conv2d_core.hpp  conv2d_test.cpp  main.cpp
src/tests/reduction/: CMakeLists.txt
src/tests/transpose/: CMakeLists.txt
src/tests/vector_add/: CMakeLists.txt  vector_add.slang
